[gd_scene load_steps=7 format=2]

[ext_resource path="res://music/test track/Track_4.ogg" type="AudioStream" id=1]
[ext_resource path="res://music/test track/Track_3.ogg" type="AudioStream" id=2]
[ext_resource path="res://music/test track/Track_1.ogg" type="AudioStream" id=3]
[ext_resource path="res://music/test track/Track_2.ogg" type="AudioStream" id=4]
[ext_resource path="res://music/test track/Track_5.ogg" type="AudioStream" id=5]
[ext_resource path="res://Music.gd" type="Script" id=6]

[node name="Music" type="Spatial"]
script = ExtResource( 6 )

[node name="Layer1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -80.0
autoplay = true

[node name="Layer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -80.0
autoplay = true

[node name="Layer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -80.0
autoplay = true

[node name="Layer4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -80.0
autoplay = true

[node name="Layer5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -80.0
autoplay = true
